--- a/mbed_app.json5
+++ b/mbed_app.json5
@@ -18,11 +18,11 @@
             "platform.stdio-baud-rate": 115200,
             "target.c_lib": "small",
             "mcuboot.log-enable": true,
-            "mcuboot.log-level": "MCUBOOT_LOG_LEVEL_INFO", // Change DEBUG to INFO for debug prints
+            "mcuboot.log-level": "MCUBOOT_LOG_LEVEL_DEBUG", // Change DEBUG to INFO for debug prints
             "mbed-trace.enable": true,
             "mbed-trace.max-level": "TRACE_LEVEL_DEBUG",
             "mbed-trace.fea-ipv6": false,
-
+            "target.application-profile": "bare-metal",
             // Uncomment to enable encryption of the image
             // "mcuboot.encrypt-rsa": true
         },
