--- a/mbed_app.json5
+++ b/mbed_app.json5
@@ -18,11 +18,12 @@
             "platform.stdio-baud-rate": 115200,
             "target.c_lib": "small",
             "mcuboot.log-enable": true,
-            "mcuboot.log-level": "MCUBOOT_LOG_LEVEL_DEBUG", // Change DEBUG to INFO for debug prints
+            "mcuboot.log-level": "MCUBOOT_LOG_LEVEL_INFO", // Change DEBUG to INFO for debug prints
             "mbed-trace.enable": true,
             "mbed-trace.max-level": "TRACE_LEVEL_DEBUG",
             "mbed-trace.fea-ipv6": false,
             "target.application-profile": "bare-metal",
+            "target.boot-stack-size": "0x5000"
             // Uncomment to enable encryption of the image
             // "mcuboot.encrypt-rsa": true
         },
@@ -169,7 +170,7 @@
             "mcuboot.scratch-size": "0x20000",
 
             "mcuboot.max-img-sectors": "112",
-            "mcuboot.flash-block-size": "0x2000",
+            "mcuboot.flash-block-size": 4,
             "mcuboot.read-granularity": 1
         }
     }
